sfdx-source/force-app/main/default/objects/WorkOrder/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-813: Onboarding event type.</description>
    <inlineHelpText>Onboarding event type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Order_Type</valueSetName>
    </valueSet>
</CustomField>