sfdx-source/force-app/main/default/objects/WorkOrder/fields/Type_of_Menu_Update__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Menu_Update__c</fullName>
    <description>LEM-1683: The type of update(s) needed for Post-Sales menu update work order.</description>
    <label>Type of Menu Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Content</fullName>
            </value>
            <value>
                <fullName>Remove Content</fullName>
            </value>
            <value>
                <fullName>Edit Existing Content</fullName>
            </value>
            <value>
                <fullName>Pricing Only</fullName>
            </value>
            <value>
                <fullName>Nimda Update(s)</fullName>
            </value>
            <value>
                <fullName>POS Menu Refresh</fullName>
            </value>
            <value>
                <fullName>POS Menu Repull</fullName>
            </value>
            <value>
                <fullName>Add/Remove Bike Friendly</fullName>
            </value>
            <value>
                <fullName>Pickup Pricing Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>