sfdx-source/force-app/main/default/objects/WorkOrder/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>LEM-14753: It is used to capture the unique identifier for different use cases like inbound integrations (SSMO/SSOB/
        Mx Portal), Onboarding Inputs, etc.</description>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>