sfdx-source/force-app/main/default/objects/WorkOrder/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>LEM-813: Account primary vertical.</description>
    <formula>Text(Account.Primary_Vertical__c)</formula>
    <inlineHelpText>Account primary vertical</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>