sfdx-source/force-app/main/default/objects/WorkOrder/fields/Withholding_with_Auto_Activations__c.field-meta.xml
<CustomField>
    <fullName>Withholding_with_Auto_Activations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10519: It indicates whether Work Order is a withholding with auto-activations i.e. the associated Contract has &quot;Payment Method&quot; as &apos;Withholding&apos; and &quot;Drive Auto-Activation Supported&quot; as &apos;Yes&apos;.</description>
    <inlineHelpText>True when the contract is set to Drive Auto-Activation Supported and Payment Method is &quot;Withholding&quot;</inlineHelpText>
    <label>Withholding with Auto-Activations?</label>
    <type>Checkbox</type>
</CustomField>