sfdx-source/force-app/main/default/objects/WorkOrder/fields/WO_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>WO_Email_Status__c</fullName>
    <description>This field only tracks the emails sent and received though the onboarding work plan</description>
    <label>WO Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Response Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>