sfdx-source/force-app/main/default/objects/WorkOrder/fields/Work_Order_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Close_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-10802
Gets populated when Work Order Status = Onboarding Complete</description>
    <label>Work Order Close Date</label>
    <type>DateTime</type>
</CustomField>