sfdx-source/force-app/main/default/objects/WorkOrder/fields/Work_Order_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Name_Link__c</fullName>
    <description>LEM-982: Indicates link of the Work Order record.</description>
    <formula>HYPERLINK(&apos;/&apos; + Id, Work_Order_Name__c, &apos;_self&apos;)</formula>
    <label>Work Order Name</label>
    <type>Text</type>
</CustomField>