sfdx-source/force-app/main/default/objects/WorkOrder/fields/Work_Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Source__c</fullName>
    <description>LEM-813: Work order source.</description>
    <inlineHelpText>Work order source</inlineHelpText>
    <label>Work Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>