sfdx-source/force-app/main/default/objects/WorkOrder/validationRules/Contract_Required_For_Type_Ads_And_Promo.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Required_For_Type_Ads_And_Promo</fullName>
    <active>true</active>
    <description>Contract is required for Type Ads &amp; Promos when Segment is SMB.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Work_Order_Validation_Rules),
  Segment__c =  $Label.AccountSegmentSMB ,
  TEXT(Type__c) = $Label.Ads_Promos,
  ISBLANK(Contract__c)
)</errorConditionFormula>
    <errorMessage>Contract is required for SMB Ads &amp; Promos Work Order.</errorMessage>
</ValidationRule>