sfdx-source/force-app/main/default/objects/WorkOrder/validationRules/Order_Protocol_On_Marketplace_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Protocol_On_Marketplace_Type</fullName>
    <active>true</active>
    <description>LEM-813: Order protocol is required when Work order type is Marketplace or Marketplace + Self Delivery.
LEM-1271: Removed Marketplace + Self Delivery type value.
LEM-1684: Bypassed it for Work Order created on store Account through system.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Work_Order_Validation_Rules),
  NOT(
    AND(
      OR (
        TEXT(Work_Order_Source__c) = $Label.WorkOrderSourceSystem,
        TEXT(Work_Order_Source__c) = $Label.SOURCE_SSMO
      ),
      Account_Record_Type_Name__c = $Label.StoreAccountRecordTypeName
    )
  ),
  ISBLANK(TEXT(Order_Protocol__c)),
  TEXT(Type__c) = $Label.WorkOrder_Type_Marketplace
)</errorConditionFormula>
    <errorDisplayField>Order_Protocol__c</errorDisplayField>
    <errorMessage>Please select Order Protocol as Marketplace type is selected.</errorMessage>
</ValidationRule>