sfdx-source/force-app/main/default/objects/WorkOrder/validationRules/PDOA_Required_On_Marketplace_COO.validationRule-meta.xml
<ValidationRule>
    <fullName>PDOA_Required_On_Marketplace_COO</fullName>
    <active>true</active>
    <description>LEM-3141: &quot;Proposed Date of Activation&quot; field is required on parent Work Order when WorkOrder Type is &quot;Marketplace&quot; or &quot;COO&quot;.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Work_Order_Validation_Rules),
  NOT(
    AND(
      OR (
        TEXT(Work_Order_Source__c) = $Label.WorkOrderSourceSystem,
        TEXT(Work_Order_Source__c) = $Label.SOURCE_SSMO
      ),
      Account_Record_Type_Name__c = $Label.StoreAccountRecordTypeName
    )
  ),
  OR(
    ISNEW(),
    ISCHANGED(Proposed_Date_of_Activation__c)
  ),
  NOT(
    AND(
     ISNEW(),
     TEXT(Opportunity__r.Source__c) = $Label.Source_Nintex
    )
  ),
  OR(
    TEXT(Type__c) = $Label.WorkOrder_Type_Marketplace,
    TEXT(Type__c) = $Label.WorkOrderTypeCOO
  ),
  ISBLANK(Proposed_Date_of_Activation__c)
)</errorConditionFormula>
    <errorDisplayField>Proposed_Date_of_Activation__c</errorDisplayField>
    <errorMessage>PDOA is required for Marketplace and COO Work Orders.</errorMessage>
</ValidationRule>