sfdx-source/force-app/main/default/objects/WorkOrder/validationRules/RestrictMenuToBeCompletedByOnMarketplace.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictMenuToBeCompletedByOnMarketplace</fullName>
    <active>true</active>
    <description>LEM-1565,LEM-4669: Menu to be completed by is required when Work order type is Marketplace or COO.
LEM-1271: Removed Marketplace + Self Delivery type value.
LEM-1684: Bypassed it for Work Order created on store Account through system.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Work_Order_Validation_Rules),
  NOT(
    AND(
      OR (
        TEXT(Work_Order_Source__c) = $Label.WorkOrderSourceSystem,
        TEXT(Work_Order_Source__c) = $Label.SOURCE_SSMO
      ),
      Account_Record_Type_Name__c = $Label.StoreAccountRecordTypeName
    )
  ),
  ISBLANK(TEXT(Menu_to_be_Completed_By__c)),
  OR(
    TEXT(Type__c) = $Label.WorkOrder_Type_Marketplace,
    TEXT(Type__c) = $Label.WorkOrderTypeCOO
  )
)</errorConditionFormula>
    <errorDisplayField>Menu_to_be_Completed_By__c</errorDisplayField>
    <errorMessage>Please populate “Menu to be Completed By” as Marketplace or COO type is selected.</errorMessage>
</ValidationRule>