sfdx-source/force-app/main/default/objects/WorkOrder/listViews/My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>My_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Work_Order_Name_Link__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Provisioning_Status__c</columns>
    <columns>Proposed_Date_of_Activation__c</columns>
    <columns>Proposed_Date_of_Menu__c</columns>
    <columns>Actual_Number_Of_Stores__c</columns>
    <columns>Activated_Centrally_AC__c</columns>
    <columns>Vertical__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ParentWorkOrder</field>
        <operation>equals</operation>
    </filters>
    <label>My Work Orders</label>
</ListView>